--- a/css/style.css
+++ b/css/style.css
@@ -15,35 +15,35 @@
 nav {
     grid-area: nav;
     border: solid 1px black;
-    height: 2em;
-    width: 150px;
+    height: 20em;
+    width: auto;
     border-radius: 3px;
-    background-image: url("../img/winterwolf.jpg");
+  background-color: #9FB1BC;
     
 }
 
 header {
-    border: solid 2px black;
+    
     display: grid;
-    height: auto;
+    height: 400px;
     grid-area: hd;
-    background-color: white;
+    
     text-align: center;
     border-radius: 3px;
-    
+      background-image: url("../img/winterwolf.jpg");
 }
 
 aside {
     grid-area: as;
-    border: solid 1px black;
-    background-color:white;
+
+    background-color:#9FB1BC;
     border-radius: 3px;
     
 }
 
 main {
     grid-area: mn;
-    border: solid 1px black;
+   
     background-color: #9FB1BC;
     border-radius: 3px;
 }
@@ -52,13 +52,14 @@ footer {
     grid-area: ft;
     background-color: #D3D0CB;
     border-radius: 3px;
-    border: solid 1px black;
+   
 }
 
 #wolfbild {
-
-    height: 10em; 
+    display: block;
+    height: 5em; 
     margin: left;
+    
     
 }
 
@@ -70,8 +71,33 @@ footer {
 
 #container2{
 display: grid; 
+text-align: left;
 }
 
 #wolf2{
     height: 10em;
 }
+
+input{
+    position: absolute;
+    position: relative;
+    left: -30px;
+    border:0px;
+    height: 25px;
+    width: 135px;
+}
+button {
+    margin: 2px;
+    padding: 10px 10px;
+background-color: cornflowerblue;
+border-radius: 10px;
+
+}
+
+h1{
+    color: white;
+    text-align: center;
+    font-size: 50px;
+}
+
+
