Fixat med logo och rubrik

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 #container {
     display: grid;
-    height: 100vh;
+    min-height: 100vh;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     grid-template-areas:
@@ -14,8 +14,8 @@
 
 nav {
     grid-area: nav;
-    border: solid 1px black;
-    height: 20em;
+    
+   
     width: auto;
     border-radius: 3px;
   background-color: #9FB1BC;
@@ -56,9 +56,9 @@ footer {
 }
 
 #wolfbild {
-    display: block;
+    display: inline;
     height: 5em; 
-    margin: left;
+    margin: auto;
     
     
 }
@@ -68,6 +68,8 @@ footer {
     height: 20em;
     margin: center;
 }
+
+
 
 #container2{
 display: grid; 
@@ -89,7 +91,7 @@ input{
 button {
     margin: 2px;
     padding: 10px 10px;
-background-color: cornflowerblue;
+background-color: #D3D0CB;
 border-radius: 10px;
 
 }
@@ -98,6 +100,8 @@ h1{
     color: white;
     text-align: center;
     font-size: 50px;
+    display: inline;
+    position: relative;
+    top: -30px;
 }
-
 
